<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_action_name_2"
        android:title="@string/status_bar"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/edit_contact"
        android:title="edit"
        android:icon="@drawable/pen_white"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_star"
        android:title="Add to favorite"
        android:icon="@drawable/star_menu"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_spis"
        android:title="@string/list"
        android:icon="@drawable/icn_btn"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_export"
        android:title="@string/export"
        android:icon="@drawable/icn_export"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/save_contact"
        android:title="@string/save_changes"
        android:visible="false"
        app:showAsAction="ifRoom"/>



    <item
        android:id="@+id/share_profile"
        android:title="share"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_share"
        android:iconTint="@color/white"/>

    <item
        android:id="@+id/download_avatar_profile"
        android:title="download"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_share_download"
        android:iconTint="@color/white"/>



    <item
        android:id="@+id/menu_profile"
        android:title="menu"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_name_2"/>










</menu>