<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:background="@drawable/popup_background"

    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/delete_selected_contacts"
            android:layout_width="40dp"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal"
                android:tint="@color/colorPrimary"
                android:src="@drawable/icn_profile_edit_trash" />

            <TextView
                android:id="@+id/textDeleteSelectMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:text="@string/delete"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="10dp" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/mergeData"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginStart="18dp">

            <ImageView
                android:id="@+id/mergeIcon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/icn_sort_merge" />

            <TextView
                android:id="@+id/mergeTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:text="@string/merge"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="10dp" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/editSelectMenu"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginStart="18dp">

            <ImageView
                android:id="@+id/editIconSelect"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:tint="@color/gray"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/icn_popup_pencil" />

            <TextView
                android:id="@+id/editTextSelectMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:text="@string/edit"
                android:textAlignment="center"
                android:textColor="@color/gray"
                android:textSize="10dp" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/share_contacts_menu"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginStart="18dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/icn_popup_share"
                android:tint="@color/colorPrimary" />

            <TextView
                android:id="@+id/textShareSelect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:text="@string/share"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="10dp" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/back_contacts"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginStart="18dp">

            <ImageView
                android:layout_marginTop="-2dp"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/backich" />

            <TextView
                android:id="@+id/textBackSelectMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:text="@string/back"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="10dp" />

        </FrameLayout>


    </LinearLayout>



</FrameLayout>