<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"

        android:layout_height="65dp">

        <HorizontalScrollView
            android:overScrollMode="never"
            android:id="@+id/bottom_scroll_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/bottom_menu_buttons_container"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:background="@color/colorPrimary"
                android:baselineAligned="false"

                android:orientation="horizontal">



                <LinearLayout
                    android:id="@+id/log_block"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_horizontal"
                        android:adjustViewBounds="true"
                        android:src="@drawable/icn_bottombar_log" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:text="Home"
                        android:textColor="@android:color/white"
                        android:textSize="11.8dp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/emails_block"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_horizontal"
                        android:adjustViewBounds="true"
                        android:src="@drawable/icn_bottombar_emails"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:text="@string/temails"
                        android:textColor="@android:color/white"
                        android:textSize="11.8dp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/contacts_block"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_horizontal"
                        android:adjustViewBounds="true"
                        android:src="@drawable/icn_bottombar_contacts"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:text="@string/contacts"
                        android:textColor="@android:color/white"
                        android:textSize="11.8dp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/timeline_block"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_horizontal"
                        android:adjustViewBounds="true"
                        android:src="@drawable/icn_bottombar_timeline" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:text="@string/timeline"
                        android:textColor="@android:color/white"
                        android:textSize="11.8dp"/>

                </LinearLayout>





                <LinearLayout
                    android:id="@+id/schedule_block"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_horizontal"
                        android:adjustViewBounds="true"
                        android:src="@drawable/icn_bottombar_schedule"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:text="@string/schedule"
                        android:textColor="@android:color/white"
                        android:textSize="11.8dp"/>

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/files_block"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_horizontal"
                        android:adjustViewBounds="true"
                        android:src="@drawable/icn_bottombar_files"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:text="@string/files"
                        android:textColor="@android:color/white"
                        android:textSize="11.8dp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/places_block"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_horizontal"
                        android:adjustViewBounds="true"
                        android:src="@drawable/icn_bottombar_places"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:text="@string/places"
                        android:textColor="@android:color/white"
                        android:textSize="11.8dp"/>

                </LinearLayout>



                <LinearLayout
                    android:id="@+id/orders_block"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_horizontal"
                        android:adjustViewBounds="true"
                        android:src="@drawable/icn_bottombar_orders"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:text="@string/orders"
                        android:textColor="@android:color/white"
                        android:textSize="11.8dp"/>

                </LinearLayout>

            </LinearLayout>

        </HorizontalScrollView>

    </LinearLayout>

</LinearLayout>